--- a/System.Web.Mvc.Dlr/System.Web.Mvc.Dlr.csproj
+++ b/System.Web.Mvc.Dlr/System.Web.Mvc.Dlr.csproj
@@ -35,21 +35,32 @@
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\dependencies\Microsoft.Scripting.dll</HintPath>
     </Reference>
+    <Reference Include="Microsoft.Scripting.Core, Version=0.9.6.10, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\dependencies\Microsoft.Scripting.Core.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Data" />
     <Reference Include="System.Web" />
+    <Reference Include="System.Web.Abstractions">
+      <RequiredTargetFramework>3.5</RequiredTargetFramework>
+    </Reference>
     <Reference Include="System.Web.Mvc, Version=1.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Web.Routing">
       <RequiredTargetFramework>3.5</RequiredTargetFramework>
     </Reference>
+    <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\DlrControllerFactory.cs" />
     <Compile Include="Core\AssemblyStreamContentProvider.cs" />
     <Compile Include="Core\Constants.cs" />
+    <Compile Include="Core\DlrEngine.cs" />
     <Compile Include="Core\Enums.cs" />
+    <Compile Include="Core\IDlrEngine.cs" />
     <Compile Include="Core\IPathProvider.cs" />
     <Compile Include="Core\VirtualPathProvider.cs" />
     <Compile Include="Core\VirtualPathStreamContentProvider.cs" />
